# biblia-leitor

./: Cargo.toml  README.md
src/: db.rs  lib.rs  main.rs
