[package]
name = "biblia_egui"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
unicode-normalization = "0.1.25"

# --- CONFIGURAÇÃO PARA DESKTOP (Linux/Windows/macOS) ---
[target.'cfg(not(target_os = "android"))'.dependencies]
eframe = { version = "0.34.1", default-features = false, features = [
    "glow",
    "default_fonts",
    "wayland",
    "x11",
] }
env_logger = "0.11"

# --- CONFIGURAÇÃO PARA ANDROID ---
[target.'cfg(target_os = "android")'.dependencies]
eframe = { version = "0.34.1", default-features = false, features = [
    "glow",
    "default_fonts",
    "android-native-activity",
] }
winit = { version = "0.30", features = ["android-native-activity"] }
android_logger = "0.15.1"
android-activity = "0.6.1"

[package.metadata.android]
build_targets = ["aarch64-linux-android", "x86_64-linux-android"]

[package.metadata.android.sdk]
package = "rust.biblia_egui"
min_sdk_version = 23
target_sdk_version = 33
